force-app/main/default/objects/Room__c/fields/Accessibility_Details__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Details__c</fullName>
    <label>Accessibility Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>