force-app/main/default/objects/Room__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>e.g. 552 square metres</description>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>