force-app/main/default/objects/Room__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <inlineHelpText>e.g. 29 x 18m</inlineHelpText>
    <label>Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>