force-app/main/default/objects/Room__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference Option</fullName>
            </value>
            <value>
                <fullName>Food Option</fullName>
            </value>
            <value>
                <fullName>Meeting option</fullName>
            </value>
            <value>
                <fullName>Wifi</fullName>
            </value>
            <value>
                <fullName>Induction Loop</fullName>
            </value>
            <value>
                <fullName>Blackout Blinds</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>