force-app/main/default/objects/Room__c/fields/Room_Setup__c.field-meta.xml
<CustomField>
    <fullName>Room_Setup__c</fullName>
    <label>Room Setup Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Theater</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Buffet</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>