force-app/main/default/objects/Room__c/fields/Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Number__c</fullName>
    <label>Telephone Number</label>
    <type>Phone</type>
</CustomField>